# Haskell

./: Ayala Ramos Pedro Antonio - Plantas.pl  FizzBuzz.hs  Investigacion NLP.hs  README.md  Tarea 1.hs  Tarea 2.hs
Fizzbuzz/: CHANGELOG.md  Fizzbuzz.cabal  LICENSE
Fizzbuzz/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
Fizzbuzz/dist-newstyle/packagedb/ghc-9.4.8/: Fizzbuzz-0.1.0.0-inplace.conf  package.cache
Fizzbuzz/src/: MyLib.hs
Fizzbuzz/test/: Test.hs
KataBowling/: CHANGELOG.md  KataBowling.cabal  LICENSE
KataBowling/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
KataBowling/dist-newstyle/packagedb/ghc-9.4.8/: KataBowling-0.1.0.0-inplace.conf  package.cache
KataBowling/src/: MyLib.hs
KataBowling/test/: Test.hs
